2006-04-26  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-file-handling-note.c (gettext macro): use
	"hildon-fm" as textual domain. Fixes N#27702

2006-04-26  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.12.12

	* Makefile.am (clean-all): brutal target to cleanup the
	folder. Will do this properly later.

2006-04-25  Luc Pionchon  <luc.pionchon@nokia.com>

	* doc/Makefile.am: use "-include" for gtk-doc.make (ignore
	included Makefile if missing).

	* configure.ac: temporarily disable GTK_DOC_CHECK (problem in
	integration environement)

	* configure.ac: print configuration summary after processing

2006-04-24  Marius Vollmer  <marius.vollmer@nokia.com>

        From Murray Cumming  <murrayc@murrayc.com>, M#183.

	* hildon-widgets/hildon-calendar-popup.c:
	(hildon_calendar_popup_new): Use only g_object_new(), passing 
	it properties, so that language bindings can do the same.
	(hildon_calendar_popup_set_date): Veryify the date here, 
	instead of only in the _new() function.
	(hildon_calendar_popup_set_property): Use get/set_date() to 
	verify the new date and to select it.
	(hildon_calendar_popup_get_property): Remove unused variables.
	* ut/hildon-widgets_tests.c (test45): New.

	* hildon-widgets/hildon-add-home-dialog.c:
	(hildon_add_home_dialog_new): Move code into
	hildon_add_home_dialog_init(),
	hildon_add_home_dialog_set_old_name(), and
	hildon_add_home_dialog_set_new_name().  Supply parameters as
	properties values to g_object_new() instead, so that language
	bindings can do the same.
	(hildon_add_home_dialog_class_init): Added name and new_name
	properties.
	(hildon_add_home_dialog_init): Create always-needed widgets.
	(hildon_add_home_dialog_get_property),
	(hildon_add_home_dialog_set_property): Get/Set the name and
	new_name properties, recreating widgets if necessary, using new
	static helper function.
	* ut/hildon-widgets_tests.c (test46): New.

	* hildon-widgets/hildon-grid-item.c