@@ -61,7 +61,8 @@
 #include <hildon-widgets/hildon-defines.h>
 
 #include <libintl.h>
-#define _(String) dgettext(PACKAGE, String)
+#define  _(String) dgettext(PACKAGE, String)
+#define c_(String) dgettext("hildon-common-strings", String)
 
 static GtkDialogClass *parent_class;
 
@@ -381,7 +382,7 @@ hildon_set_password_response_change(GtkDialog * dialog, gint arg1,
 	    g_signal_stop_emission_by_name(G_OBJECT(dialog),
 					   "response");
 	    gtk_infoprint (NULL,
-			   _(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
+			   c_(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
 	    gtk_widget_grab_focus(GTK_WIDGET(pwd2ndEntry));
 	  } else {
 	    /* Error: Passwords don't match, so start over */
@@ -390,7 +391,7 @@ hildon_set_password_response_change(GtkDialog * dialog, gint arg1,
 	    gtk_entry_set_text(pwd1stEntry, "");
 	    gtk_entry_set_text(pwd2ndEntry, "");
 	    gtk_infoprint (NULL,
-			   _(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
+			   c_(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
 	    gtk_widget_grab_focus(GTK_WIDGET(pwd1stEntry));
 	  }
 	} else {
@@ -398,11 +399,11 @@ hildon_set_password_response_change(GtkDialog * dialog, gint arg1,
 	  g_signal_stop_emission_by_name(G_OBJECT(dialog), "response");
 	  if (text2[0] == '\0') {
 	    /* Error: Both fields are empty */
-	    gtk_infoprint (NULL, _(HILDON_SET_PASSWORD_DIALOG_EMPTY));
+	    gtk_infoprint (NULL, c_(HILDON_SET_PASSWORD_DIALOG_EMPTY));
 	  } else {
 	    /* Error: Second field doesn't match
 	       the empty first field, so start over */
-	    gtk_infoprint (NULL, _(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
+	    gtk_infoprint (NULL, c_(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
 	    gtk_entry_set_text(pwd2ndEntry, "");
 	  }
 	  gtk_widget_grab_focus(GTK_WIDGET(pwd1stEntry));
@@ -412,13 +413,13 @@ hildon_set_password_response_change(GtkDialog * dialog, gint arg1,
            Confirm remove password protection */
 	note = HILDON_NOTE(hildon_note_new_confirmation
 			   (GTK_WINDOW(dialog),
-			    _(HILDON_SET_PASSWORD_DIALOG_REMOVE_PROTECTION
+			    c_(HILDON_SET_PASSWORD_DIALOG_REMOVE_PROTECTION
 			      )));
       
 	hildon_note_set_button_texts
 	  (HILDON_NOTE(note),
-	   _(HILDON_REMOVE_PROTECTION_CONFIRMATION_REMOVE), 
-	   _(HILDON_REMOVE_PROTECTION_CONFIRMATION_CANCEL));
+	   c_(HILDON_REMOVE_PROTECTION_CONFIRMATION_REMOVE), 
+	   c_(HILDON_REMOVE_PROTECTION_CONFIRMATION_CANCEL));
 	
         /* Display confirmation note */
 	i = gtk_dialog_run(GTK_DIALOG(note));
@@ -474,14 +475,14 @@ hildon_set_password_response_set(GtkDialog * dialog, gint arg1,
                 /* Second field is empty, so show error,
                    but don't clear the fields */
                 g_signal_stop_emission_by_name(G_OBJECT(dialog), "response");
-                gtk_infoprint (NULL, _(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
+                gtk_infoprint (NULL, c_(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
                 gtk_widget_grab_focus (GTK_WIDGET (priv->pwd2ndEntry));
             } else {
                 /* Error: Passwords don't match, so start over */
                 g_signal_stop_emission_by_name(G_OBJECT(dialog), "response");
 	        gtk_entry_set_text(pwd1stEntry, "");
 		gtk_entry_set_text(pwd2ndEntry, "");
-	        gtk_infoprint (NULL, _(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
+	        gtk_infoprint (NULL, c_(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
                 gtk_widget_grab_focus(GTK_WIDGET(priv->pwd1stEntry));
 	    }
         } else {
@@ -489,11 +490,11 @@ hildon_set_password_response_set(GtkDialog * dialog, gint arg1,
           g_signal_stop_emission_by_name(G_OBJECT(dialog), "response");
 	  if (text2[0] == '\0') {
 	    /* Error: Both fields are empty */
-	    gtk_infoprint (NULL, _(HILDON_SET_PASSWORD_DIALOG_EMPTY));
+	    gtk_infoprint (NULL, c_(HILDON_SET_PASSWORD_DIALOG_EMPTY));
 	  } else {
 	    /* Error: Second field doesn't match
 	       the empty first field, so start over */
-	    gtk_infoprint (NULL, _(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
+	    gtk_infoprint (NULL, c_(HILDON_SET_PASSWORD_DIALOG_MISMATCH));
 	    gtk_entry_set_text(pwd2ndEntry, "");
 	  }
 	  gtk_widget_grab_focus(GTK_WIDGET(pwd1stEntry));
