@@ -28,6 +28,8 @@
 #include <gtk/gtkdialog.h>
 
 G_BEGIN_DECLS
+
+
 #define HILDON_TYPE_SET_PASSWORD_DIALOG \
   ( hildon_set_password_dialog_get_type() )
 #define HILDON_SET_PASSWORD_DIALOG(obj) \
@@ -41,46 +43,31 @@ G_BEGIN_DECLS
 #define HILDON_IS_SET_PASSWORD_DIALOG_CLASS(klass) \
   (GTK_CHECK_CLASS_TYPE ((klass), HILDON_TYPE_SET_PASSWORD_DIALOG))
 
-#define HILDON_SET_PASSWORD_DIALOG_TITLE \
-         "ecdg_ti_set_password"
-#define HILDON_SET_PASSWORD_DIALOG_PASSWORD \
-         "ecdg_fi_set_passwd_enter_pwd"
-#define HILDON_SET_PASSWORD_DIALOG_VERIFY_PASSWORD \
-         "ecdg_fi_set_passwd_confirm"
-#define HILDON_SET_PASSWORD_DIALOG_OK \
-         "ecdg_bd_set_password_dialog_ok"
-#define HILDON_SET_PASSWORD_DIALOG_CANCEL \
-         "ecdg_bd_set_password_dialog_cancel"
 
-#define HILDON_SET_MODIFY_PASSWORD_DIALOG_TITLE \
-         "ckdg_ti_dialog_c_passwd_change_password"
-#define HILDON_SET_MODIFY_PASSWORD_DIALOG_LABEL \
-         "ckdg_fi_dialog_c_passwd_pwd_protect"
-#define HILDON_SET_MODIFY_PASSWORD_DIALOG_PASSWORD \
-         "ckdg_fi_dialog_c_passwd_new_pwd"
-#define HILDON_SET_MODIFY_PASSWORD_DIALOG_VERIFY_PASSWORD \
-         "ckdg_fi_dialog_c_passwd_ver_pwd"
-#define HILDON_SET_MODIFY_PASSWORD_DIALOG_OK \
-         "ckdg_bd_change_password_dialog_ok"
-#define HILDON_SET_MODIFY_PASSWORD_DIALOG_CANCEL \
-         "ckdg_bd_change_password_dialog_cancel"
 
-#define HILDON_SET_PASSWORD_DIALOG_MISMATCH \
-         "ecdg_ib_passwords_do_not_match"
+#define HILDON_SET_PASSWORD_DIALOG_TITLE                  "ecdg_ti_set_password"
+#define HILDON_SET_PASSWORD_DIALOG_PASSWORD               "ecdg_fi_set_passwd_enter_pwd"
+#define HILDON_SET_PASSWORD_DIALOG_VERIFY_PASSWORD        "ecdg_fi_set_passwd_confirm"
+#define HILDON_SET_PASSWORD_DIALOG_OK                     "ecdg_bd_set_password_dialog_ok"
+#define HILDON_SET_PASSWORD_DIALOG_CANCEL                 "ecdg_bd_set_password_dialog_cancel"
 
-#define HILDON_SET_PASSWORD_DIALOG_EMPTY \
-         "ecdg_ib_password_is_empty"
+#define HILDON_SET_MODIFY_PASSWORD_DIALOG_TITLE           "ckdg_ti_dialog_c_passwd_change_password"
+#define HILDON_SET_MODIFY_PASSWORD_DIALOG_LABEL           "ckdg_fi_dialog_c_passwd_pwd_protect"
+#define HILDON_SET_MODIFY_PASSWORD_DIALOG_PASSWORD        "ckdg_fi_dialog_c_passwd_new_pwd"
+#define HILDON_SET_MODIFY_PASSWORD_DIALOG_VERIFY_PASSWORD "ckdg_fi_dialog_c_passwd_ver_pwd"
+#define HILDON_SET_MODIFY_PASSWORD_DIALOG_OK              "ckdg_bd_change_password_dialog_ok"
+#define HILDON_SET_MODIFY_PASSWORD_DIALOG_CANCEL          "ckdg_bd_change_password_dialog_cancel"
 
-#define HILDON_SET_PASSWORD_DIALOG_REMOVE_PROTECTION \
-         "ckdg_nc_dialog_c_passwd_remove_pwd"
+#define HILDON_SET_PASSWORD_DIALOG_MISMATCH               "ecdg_ib_passwords_do_not_match"
+#define HILDON_SET_PASSWORD_DIALOG_EMPTY                  "ecdg_ib_password_is_empty"
+#define HILDON_SET_PASSWORD_DIALOG_REMOVE_PROTECTION      "ckdg_nc_dialog_c_passwd_remove_pwd"
 
-#define HILDON_REMOVE_PROTECTION_CONFIRMATION_REMOVE \
-         "ckdg_bd_dialog_c_passwd_remove_button"
+#define HILDON_REMOVE_PROTECTION_CONFIRMATION_REMOVE      "ckdg_bd_dialog_c_passwd_remove_button"
+#define HILDON_REMOVE_PROTECTION_CONFIRMATION_CANCEL      "ckdg_bd_dialog_c_passwd_cancel_button"
 
-#define HILDON_REMOVE_PROTECTION_CONFIRMATION_CANCEL \
-         "ckdg_bd_dialog_c_passwd_cancel_button"
 
-typedef struct _HildonSetPasswordDialog HildonSetPasswordDialog;
+
+typedef struct _HildonSetPasswordDialog      HildonSetPasswordDialog;
 typedef struct _HildonSetPasswordDialogClass HildonSetPasswordDialogClass;
 
 struct _HildonSetPasswordDialog {
@@ -92,25 +79,24 @@ struct _HildonSetPasswordDialogClass {
 };
 
 
-GtkWidget *hildon_set_password_dialog_new(GtkWindow * parent,
-                                          gboolean modify_protection);
 
-GtkWidget *hildon_set_password_dialog_new_with_default
-                                         (GtkWindow *parent,
-					  const gchar *password,
-                                          gboolean modify_protection);
+GtkWidget *  hildon_set_password_dialog_new              (GtkWindow   *parent,
+                                                          gboolean     modify_protection);
 
-GType hildon_set_password_dialog_get_type(void) G_GNUC_CONST;
+GtkWidget *  hildon_set_password_dialog_new_with_default (GtkWindow   *parent,
+                                                          const gchar *password,
+                                                          gboolean     modify_protection);
 
-const gchar
-    *hildon_set_password_dialog_get_password(HildonSetPasswordDialog *
-                                             dialog);
+GType        hildon_set_password_dialog_get_type         (void) G_GNUC_CONST;
 
-gboolean hildon_set_password_dialog_get_protected(HildonSetPasswordDialog *
-                                                  dialog);
+const gchar *hildon_set_password_dialog_get_password     (HildonSetPasswordDialog *dialog);
 
-void hildon_set_password_dialog_set_domain(HildonSetPasswordDialog *dialog,
-					   const gchar *domain);
+gboolean     hildon_set_password_dialog_get_protected    (HildonSetPasswordDialog *dialog);
+
+void         hildon_set_password_dialog_set_domain       (HildonSetPasswordDialog *dialog,
+                                                          const gchar             *domain);
+
 
 G_END_DECLS
-#endif /* HILDON_SET_PASSWORD_DIALOG_H */
+
+#endif /* __HILDON_SET_PASSWORD_DIALOG_H__ */
